# code_buddy

./: .env.example  README.md  pyproject.toml
documents/: acp_flow.plantuml  prompt_compaction_flow.puml  tool_execution_flow.plantuml
src/: main.py  model.py
src/acp/: acp_agent.py  session.py
src/cli_agent/: cli_agent.py
src/mcp/: client.py  config.py  default_mcp_servers.json  mcp_tools.py
src/prompt/: compaction_prompt.md  system_prompt.md
src/tools/: command_tools.py  grep_search.py  langchain_tools.py  replace_file_content.py  tool.py
src/utils/: __init__.py  prompt_compaction.py
